[package]
name = "motarem"
version = "0.1.0"
edition = "2021"

[lib]
name = "motarem"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
moka = { version = "0.12.11", features = ["future"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
